# sentinel

./: .gitignore  Cargo.toml  README.md  build.rs  config.default.json  config.prism.json
pages/: addons.html  base.html  data.html  home.html  settings.html  store.html  title-bar.html
pages/assets/css/: OpenFramework.css  OpenFramework.css.map  OpenFramework.scss  VeilFramework.css  style.css  universal.css
pages/assets/js/: OpenFramework.js  VeilFramework.js  floating-nav.js  script.js
pages/components/: floating-nav.html  sidebar.html  top-panel.html
src/: autostart.rs  cli.rs  config.rs  config_ui.rs  installer.rs  logging.rs  main.rs  paths.rs  utils.rs
src/custom/: mod.rs
src/custom/windows/: mod.rs  registry.rs  taskbar.rs  theme.rs  transparency.rs  wallpaper.rs  windows_customizer.rs
src/ipc/: data_updater.rs  dispatch.rs  http_bridge.rs  mod.rs  registry.rs  request.rs  response.rs  server.rs
src/ipc/addon/: mod.rs  reload.rs  start.rs  stop.rs  utils.rs
src/ipc/appdata/: active_window.rs  audio_manager.rs  mod.rs  notifications.rs  trayicons.rs  window.rs
src/ipc/binding/: README.md
src/ipc/dispatch/: addond.rs  backendd.rs  controld.rs  registryd.rs  sysdatad.rs  trackingd.rs
src/ipc/sysdata/: audio.rs  bluetooth.rs  cpu.rs  display.rs  gpu.rs  idle.rs  keyboard.rs  media.rs  mod.rs  mouse.rs  network.rs  power.rs  processes.rs  ram.rs  storage.rs  system.rs  temp.rs  time.rs  wifi.rs
src/systemtray/: build.rs  discover.rs  mod.rs  systray.rs
src/systemtray/addon/: mod.rs  reload.rs  start.rs  stop.rs
src/ui/: extensions.rs  mod.rs  pages.rs
