[package]
name = "sentinelc"
version = "0.1.0"
edition = "2021"
authors = ["Ico2"]
description = "Sentinel Backend/CLI"
license = "UNLICENSED"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Foundation",
    "Win32_Devices_Enumeration_Pnp",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]}

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.56", features = ["derive"] }
json = "0.12"
image = "0.25.9"
tao = "0.34.5"
tray-icon = "0.21.3"
sysinfo = "0.38.0"
toml = "0.9.8"
wry = { version = "0.53", features = ["os-webview", "protocol"] }
urlencoding = "2.1"
dirs-next = "2.0.0"
sha2 = "0.10.9"
edid = "0.3.0"
notify = "8.2"
walkdir = "2.5.0"
windows-strings = "0.5.1"
chrono = "0.4.43"
as_bool = "0.1.3"
once_cell = "1.21.3"

